--- a/final_modeling.Rmd
+++ b/final_modeling.Rmd
@@ -39,7 +39,7 @@ source('multiplot.R')
 
 ```{r}
 
-NUM.RECENT.RATINGS = 10
+NUM.RECENT.RATINGS = 20
 
 sql <- "SELECT rb.business_id, 
         array_to_string( array_agg( rb.date || ';' || rb.stars || ';' || rb.useful || ';' || rb.country ), ',') as ratings, 
@@ -65,10 +65,11 @@ calculate_avgs <- function(rating_string) {
   recent.ratings <- ratings[recent.range]
   base.avg   <- mean(sapply(base.ratings,   function(rtg){ return(as.numeric( strsplit(rtg, ';')[[1]][2] )) }))
   recent.avg <- mean(sapply(recent.ratings, function(rtg){ return(as.numeric( strsplit(rtg, ';')[[1]][2] )) }))
+  recent.sd  <- sd(  sapply(recent.ratings, function(rtg){ return(as.numeric( strsplit(rtg, ';')[[1]][2] )) }))
   last.rating <- as.numeric( strsplit( ratings[ num.ratings ], ';')[[1]][2] )  # stars of latest rating
   useful      <- as.numeric( strsplit( ratings[ num.ratings ], ';')[[1]][3] )  # usefulness of latest rating
   country     <- ( strsplit( ratings[1], ';')[[1]][4] )            # country of first rating (the same for all ratings) 
-  return( list(base.avg = base.avg, recent.avg = recent.avg, last.rating = last.rating, useful=useful, country=country))
+  return( list(base.avg = base.avg, recent.avg = recent.avg, recent.sd = recent.sd, last.rating = last.rating, useful=useful, country=country))
 }
 
 # drop businesses with fewer then 2xNUM.RECENT.RATINGS
@@ -76,11 +77,12 @@ agg.ratings <- agg.ratings[ agg.ratings$num_reviews > 2*NUM.RECENT.RATINGS, ]
 calculated.cols <- t(sapply( agg.ratings$ratings, calculate_avgs ))
 row.names(calculated.cols) <- c()  # remove the row names
 calculated.df <- as.data.frame(calculated.cols)
-agg.ratings[,4:8] <- calculated.df
-names(agg.ratings)[4:8] <- cbind("base.avg.rating", "recent.avg.rating", "last.rating", "useful", "country")
+agg.ratings[,4:9] <- calculated.df
+names(agg.ratings)[4:9] <- cbind("base.avg.rating", "recent.avg.rating", "recent.sd", "last.rating", "useful", "country")
 # convert lists to numeric/character:
 agg.ratings$base.avg.rating <- as.numeric(agg.ratings$base.avg.rating)
 agg.ratings$recent.avg.rating <- as.numeric(agg.ratings$recent.avg.rating)
+agg.ratings$recent.sd <- as.numeric(agg.ratings$recent.sd)
 agg.ratings$last.rating <- as.numeric(agg.ratings$last.rating)
 agg.ratings$useful <- as.numeric(agg.ratings$useful)
 agg.ratings$country <- as.character(agg.ratings$country)
@@ -153,19 +155,16 @@ exp(coef(m))
 exp(cbind(OR = coef(m), ci))
 ```
 
-If the value of base.avg.rating moves one unit (e.g. from 1 to 2), the odds of moving from a 1-star last.rating to a higher rating is doubled. 
-Similarily, if the value of recent.avg.rating moves one unit (e.g. from 1 to 2), the odds of moving from a 1-star last.rating to a higher rating is multiplied by 1.8.
+If the value of base.avg.rating moves one unit (e.g. from 1 to 2), the odds of moving from a 1-star last.rating to a higher rating is multiplied by 1.8
+Similarily, if the value of recent.avg.rating moves one unit (e.g. from 1 to 2), the odds of moving from a 1-star last.rating to a higher rating is roughly doubled.
 
 
 ## Influence of country and the number of reviews at the time of the last rating
 
-Since there is only data for 2 German businesses, exclude them:
+
 ```{r}
 table(agg.ratings$country)
-```
 
-
-```{r}
 m2 <- polr(stars ~ base.avg.rating + recent.avg.rating + num_reviews + country, data = agg.ratings[ agg.ratings$country != 'DE', ], Hess=TRUE)
 summary(m2)
 
@@ -195,6 +194,11 @@ So number of reviews and country don't affect the rating, and the relations betw
 
 
 ```{r}
+valid.sds <- which(agg.ratings$recent.sd > 0)
+agg.ratings.with.sd <- agg.ratings[ valid.sds, ]
+agg.ratings.with.sd$deviation <- abs(agg.ratings.with.sd$recent.avg.rating - agg.ratings.with.sd$last.rating) / agg.ratings.with.sd$recent.sd
 
-# n=25, bar=3.357143, rar=3.5, r=2, useful=0, US
+cor(agg.ratings.with.sd$deviation, agg.ratings.with.sd$useful)
 ```
+
+There is no correlation between the deviation of the last rating form the recent average and the 'usefulness', i.e. the number of times a review got the vote 'useful'.
